Working gnl + updated lib

--- a/libft/Makefile
+++ b/libft/Makefile
@@ -76,7 +76,8 @@ OBJ = ft_memset.o \
 	  ft_count_wds.o \
 	  ft_int_length.o \
 	  ft_strn_append.o \
-	  ft_copystr.o
+	  ft_copystr.o \
+	  ft_realloc.o
 
 CC = gcc -Wall -Werror -Wextra -I ./includes
 
